# scp-commander

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/include/: scp_core.h
core/src/: ffi.rs  ftp.rs  jump.rs  lib.rs  ops.rs  s3.rs  sftp.rs  transport.rs  types.rs
core/tests/: parallel_connections.rs
packaging/: scp-commander.desktop
packaging/flatpak/: net.manto.ScpCommander.yml
scripts/: integration-test.sh  make-icon.swift  package-deb.sh  package-macos.sh
tests/integration/: docker-compose.yml  enable-forwarding.sh
ui-macos/: Package.swift
ui-macos/Sources/CScpCore/: shim.c
ui-macos/Sources/CScpCore/include/: module.modulemap  scp_core.h
ui-macos/Sources/ScpCommander/: App.swift  AppState.swift  ContentView.swift  CoreClient.swift  HelpView.swift  HelpWindowController.swift  Info.plist  Keychain.swift  LogWindowController.swift  PreferencesView.swift  Sites.swift  TransferClientPool.swift  TransferWindowController.swift  Transfers.swift
ui-tauri/: README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
ui-tauri/src/: App.svelte  app.css  main.js
ui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
ui-tauri/src-tauri/capabilities/: default.json
ui-tauri/src-tauri/src/: extras.rs  main.rs  secret.rs  sites.rs  sync.rs  transfers.rs
ui-tauri/src/lib/: ConsoleDialog.svelte  ContextMenu.svelte  KnownHostsDialog.svelte  Modal.svelte  Pane.svelte  PrefsDialog.svelte  SyncDialog.svelte  TransferQueue.svelte  TransfersWindow.svelte  api.js
ui-tauri/tests/: fnbar.spec.js  harness.js  placeholder.spec.js  queue-controls.spec.js  selection.spec.js  smoke.spec.js  theme.spec.js  transfers.spec.js  virtualization.spec.js
ui-ubuntu/: Cargo.toml
ui-ubuntu/src/: main.rs  pool.rs  prefs.rs  secrets.rs  sites.rs  worker.rs  workspace.rs
