[workspace]
resolver = "2"
members = ["core", "ui-ubuntu", "ui-tauri/src-tauri"]
# ui-ubuntu needs GTK4 system libs (Linux) and ui-tauri pulls the webview
# toolchain, so default builds to just the core; build the others explicitly
# (-p scp-ubuntu / -p scp-tauri).
default-members = ["core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
