[workspace]
resolver = "2"
members = ["core", "ui-tauri/src-tauri"]
# ui-tauri pulls the webview toolchain, so default builds to just the core;
# build the app explicitly (-p scp-tauri) or via `cargo tauri build`.
default-members = ["core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
