[package]
name = "scp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared transfer core (SFTP/FTP/S3) for the cross-platform file manager"

# Two crate types:
#   rlib      -> linked by the Rust GTK Ubuntu front-end (same workspace)
#   staticlib -> linked by the macOS SwiftUI front-end via the C FFI in ffi.rs
[lib]
name = "scp_core"
crate-type = ["rlib", "staticlib"]

[dependencies]
# SFTP/SCP over SSH. Uses system libssh2 + openssl via pkg-config.
ssh2 = "0.9"
# FTP / FTPS (synchronous API). native-tls enables the FTPS upgrade.
suppaftp = { version = "6", features = ["native-tls"] }
thiserror = "1"

# S3 / S3-compatible object storage. Optional: only built with the `s3` feature.
# The `blocking` feature gives us synchronous *_blocking methods so the whole
# core stays sync (no tokio runtime threaded through the trait).
rust-s3 = { version = "0.37", features = ["blocking"], optional = true }

[features]
default = []
# Enables the real S3 backend (pulls rust-s3 + a small async runtime under the
# blocking shim). Build with: cargo build -p scp-core --features s3
s3 = ["dep:rust-s3"]

[[bin]]
name = "scp-cli"
path = "src/bin/scp-cli.rs"
