[package]
name = "scp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared transfer core (SFTP/FTP/S3) for the cross-platform file manager"

# Linked as a normal Rust rlib by the Tauri app (same workspace) and the CLI.
[lib]
name = "scp_core"
crate-type = ["rlib"]

[dependencies]
# SFTP/SCP over SSH. Uses system libssh2 + openssl via pkg-config.
ssh2 = "0.9"
# FTP / FTPS (synchronous API). native-tls enables the FTPS upgrade.
suppaftp = { version = "6", features = ["native-tls"] }
thiserror = "1"
# Timestamp type returned by suppaftp MDTM (already a transitive dep).
chrono = "0.4"

# S3 / S3-compatible object storage. Optional: only built with the `s3` feature.
# The `blocking` feature gives us synchronous *_blocking methods so the whole
# core stays sync (no tokio runtime threaded through the trait).
rust-s3 = { version = "0.37", features = ["blocking"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
# Enables the real S3 backend (pulls rust-s3 + a small async runtime under the
# blocking shim). Build with: cargo build -p scp-core --features s3
s3 = ["dep:rust-s3"]

[[bin]]
name = "scp-cli"
path = "src/bin/scp-cli.rs"
