[package]
name = "scp-ubuntu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GTK4 native front-end (Ubuntu/Linux) for the file manager"

[[bin]]
name = "scp-ubuntu"
path = "src/main.rs"

[dependencies]
scp-core = { path = "../core" }
# Targets Linux (apt install libgtk-4-dev); also compiles against Homebrew's
# gtk4 on macOS, which we use for compile-checking the UI.
gtk = { package = "gtk4", version = "0.9" }
# Bridges the blocking worker thread back into the GTK main loop.
async-channel = "2"
# Saved-sites persistence.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
