[package]
name = "scp-ubuntu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GTK4 native front-end (Ubuntu/Linux) for the file manager"

[[bin]]
name = "scp-ubuntu"
path = "src/main.rs"

[dependencies]
scp-core = { path = "../core" }
# Targets Linux (apt install libgtk-4-dev); also compiles against Homebrew's
# gtk4 on macOS, which we use for compile-checking the UI. v4_10 enables
# FileDialog/AlertDialog (needs GTK >= 4.10 at runtime, i.e. Ubuntu 24.04+).
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
# Passwords in GNOME Keyring / KWallet via the Secret Service D-Bus API.
secret-service = { version = "5", features = ["rt-async-io-crypto-rust"] }
# Bridges the blocking worker thread back into the GTK main loop.
async-channel = "2"
# Saved-sites persistence.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
