[package]
name = "scp-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SCP Commander — cross-platform Tauri frontend over scp-core"
default-run = "scp-tauri"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scp-core = { path = "../../core" }

# libssh2 (via scp-core's ssh2 dep) needs a crypto backend; on Windows the
# vendored OpenSSL avoids a system OpenSSL install. No-op elsewhere.
[target.'cfg(windows)'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
